tests/golden/compile-pass/struct_literal_fields.rua
struct Point {
    x: i64,
    y: i64,
}

fn sum() -> i64 {
    let point = Point { x: 2, y: 3 };
    point.x + point.y
}
