tests/golden/compile-fail/enum_wrong_tuple_form.rua
enum Message { Move(i64, i64) }

fn message() -> Message {
    Message::Move { x: 1, y: 2 }
}
